// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`apiContracts > buildDeleteRoute > sets default delete route values 1`] = `
{
  "description": "some description",
  "isEmptyResponseExpected": true,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "delete",
  "pathResolver": [Function],
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": undefined,
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "def": {
      "shape": {},
      "type": "object",
    },
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
  "visibility": "public",
}
`;

exports[`apiContracts > buildGetRoute > resolves path params 1`] = `
{
  "description": undefined,
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "get",
  "pathResolver": [Function],
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": ZodObject {
    "def": {
      "shape": {
        "userId": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "object",
  },
  "requestQuerySchema": undefined,
  "responseHeaderSchema": undefined,
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "def": {
      "shape": {},
      "type": "object",
    },
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
  "visibility": "public",
}
`;

exports[`apiContracts > buildGetRoute > sets default get route values 1`] = `
{
  "description": "some description",
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": {
    "hello": "world",
  },
  "method": "get",
  "pathResolver": [Function],
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": undefined,
  "responseSchemasByStatusCode": {
    "200": ZodObject {
      "def": {
        "shape": {},
        "type": "object",
      },
      "type": "object",
    },
    "400": ZodObject {
      "def": {
        "shape": {
          "message": ZodString {
            "def": {
              "type": "string",
            },
            "type": "string",
          },
        },
        "type": "object",
      },
      "type": "object",
    },
  },
  "successResponseBodySchema": ZodObject {
    "def": {
      "shape": {},
      "type": "object",
    },
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
  "visibility": "public",
}
`;

exports[`apiContracts > buildPayloadRoute > sets default change route values 1`] = `
{
  "description": "some description",
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "post",
  "pathResolver": [Function],
  "requestBodySchema": ZodObject {
    "def": {
      "shape": {},
      "type": "object",
    },
    "type": "object",
  },
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": undefined,
  "responseSchemasByStatusCode": {
    "200": ZodObject {
      "def": {
        "shape": {},
        "type": "object",
      },
      "type": "object",
    },
    "400": ZodObject {
      "def": {
        "shape": {
          "message": ZodString {
            "def": {
              "type": "string",
            },
            "type": "string",
          },
        },
        "type": "object",
      },
      "type": "object",
    },
  },
  "successResponseBodySchema": ZodObject {
    "def": {
      "shape": {},
      "type": "object",
    },
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
  "visibility": "internal",
}
`;

exports[`apiContracts > responseHeaderSchema > buildDeleteRoute > works with both request and response header schemas 1`] = `
{
  "description": "Delete data with rate limiting",
  "isEmptyResponseExpected": true,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "delete",
  "pathResolver": [Function],
  "requestHeaderSchema": ZodObject {
    "def": {
      "shape": {
        "authorization": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
        "x-api-key": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "object",
  },
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": ZodObject {
    "def": {
      "shape": {
        "x-ratelimit-limit": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
        "x-ratelimit-remaining": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
        "x-ratelimit-reset": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "object",
  },
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "def": {
      "shape": {},
      "type": "object",
    },
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
  "visibility": "public",
}
`;

exports[`apiContracts > responseHeaderSchema > buildGetRoute > validates response header schema with path params 1`] = `
{
  "description": undefined,
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "get",
  "pathResolver": [Function],
  "requestHeaderSchema": undefined,
  "requestPathParamsSchema": ZodObject {
    "def": {
      "shape": {
        "userId": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "object",
  },
  "requestQuerySchema": undefined,
  "responseHeaderSchema": ZodObject {
    "def": {
      "shape": {
        "x-ratelimit-limit": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
        "x-ratelimit-remaining": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
        "x-ratelimit-reset": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "object",
  },
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "def": {
      "shape": {},
      "type": "object",
    },
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
  "visibility": "public",
}
`;

exports[`apiContracts > responseHeaderSchema > buildGetRoute > works with both request and response header schemas 1`] = `
{
  "description": "Get data with rate limiting",
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "get",
  "pathResolver": [Function],
  "requestHeaderSchema": ZodObject {
    "def": {
      "shape": {
        "authorization": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
        "x-api-key": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "object",
  },
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": ZodObject {
    "def": {
      "shape": {
        "x-ratelimit-limit": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
        "x-ratelimit-remaining": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
        "x-ratelimit-reset": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "object",
  },
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "def": {
      "shape": {},
      "type": "object",
    },
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
  "visibility": "public",
}
`;

exports[`apiContracts > responseHeaderSchema > buildPayloadRoute > works with both request and response header schemas 1`] = `
{
  "description": undefined,
  "isEmptyResponseExpected": false,
  "isNonJSONResponseExpected": false,
  "metadata": undefined,
  "method": "post",
  "pathResolver": [Function],
  "requestBodySchema": ZodObject {
    "def": {
      "shape": {},
      "type": "object",
    },
    "type": "object",
  },
  "requestHeaderSchema": ZodObject {
    "def": {
      "shape": {
        "authorization": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
        "x-api-key": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "object",
  },
  "requestPathParamsSchema": undefined,
  "requestQuerySchema": undefined,
  "responseHeaderSchema": ZodObject {
    "def": {
      "shape": {
        "x-ratelimit-limit": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
        "x-ratelimit-remaining": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
        "x-ratelimit-reset": ZodString {
          "def": {
            "type": "string",
          },
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "object",
  },
  "responseSchemasByStatusCode": undefined,
  "successResponseBodySchema": ZodObject {
    "def": {
      "shape": {},
      "type": "object",
    },
    "type": "object",
  },
  "summary": undefined,
  "tags": undefined,
  "visibility": "public",
}
`;
